templates: fix collapse links

--- a/invenio_search_ui/static/scss/invenio_search_ui/search.scss
+++ b/invenio_search_ui/static/scss/invenio_search_ui/search.scss
@@ -46,3 +46,7 @@ $invenio-search-light-grey: #fafafa !default;
         margin: 0 0;
     }
 }
+
+a.ng-binding{
+  cursor: pointer;
+}
